expose complete non-live product rehearsal
